edit review text

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
       <nav id="pc-version">
         <div class="wrapper">
-          <a href="/"><img src="img/logo.svg" alt="" /></a>
+          <a href=""><img src="img/logo.svg" alt="" /></a>
           <ul>
             <li class="contacts">
               <span class="mail">rost11hr@gmail.com</span>
@@ -148,7 +148,7 @@
       </div>
       <div class="bottom-footer">
         <div class="wrapper">
-          <a href="./"><img src="img/logo.svg" alt="" /></a>
+          <a href=""><img src="img/logo.svg" alt="" /></a>
           <a href="" class="to-main-site-btn">Наш основной сайт</a>
         </div>
       </div>
